# stm32-demo

./: Cargo.toml  MEMORY.x  embed.toml
.cargo/: config.toml
examples/: copy.rs
src/: exp1.rs  exp2.rs  exp3.rs  exp4.rs  lib.rs  main.rs
