[package]
name = "stm32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/medium"]
[dependencies]
stm32f1xx-hal = {version = "0.9.0", features = ["stm32f103", "medium", "rt"]}
# cortex-m = "0.7.6"
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
rtt-target = "0.5.0"
critical-section = "1.0"
[[bin]]
name = "stm32"
test = false


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
